syntax = "proto3";

package auth;
option java_package = "net.conradwood.golang.apis.auth";
import "golang.conradwood.net/apis/auth/auth.proto";
import "golang.conradwood.net/apis/common/common.proto";

/*
Authenticate Users
*/
service AuthenticationService {
  // DEPRECATED authenticate a user by username/password, return token
  rpc GetByPassword(AuthenticatePasswordRequest) returns (AuthResponse);
  // DEPRECATED authenticate a user by token, return same token
  rpc GetByToken(AuthenticateTokenRequest) returns (AuthResponse);
  // authenticate a user by username/password, return token
  rpc SignedGetByPassword(AuthenticatePasswordRequest) returns (SignedAuthResponse);
  // authenticate a user by token, return same token
  rpc SignedGetByToken(AuthenticateTokenRequest) returns (SignedAuthResponse);
  // get the public signing key
  rpc GetPublicSigningKey(common.Void) returns (KeyResponse);
}

message KeyResponse {
  bytes Key = 1;
  string CloudName=2; // e.g. yacloud.eu
}
message AuthenticatePasswordRequest {
  string Email = 1;
  string Password = 2;
}
message AuthenticateTokenRequest {
  string Token = 1;
}
